--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-
+{{!-- <!DOCTYPE html>
+<html lang="en"> --}}
+{{!-- 
 <head>
   <meta charset="UTF-8">
-  <title>Todo - Express</title>
+  <title>Burger Shop</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="./style.css" media="screen" title="no title">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</head>
+</head> --}}
 
-<body>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -19,18 +18,24 @@
           <li class="list-group-item burgers">
             <form id="burger-form">
             <input class="new-burger" placeholder="Add a burger" type="text" />
-            <button type="submit" class="btn btn-default">Add a Burger</button>
+            <button type="submit" class="btn btn-default submit">Add a Burger</button>
             </form>
           </li>
-          <span class="burger-container">
-          </span>
+        </ul>
+        <ul>
+          {{#each burgers}}
+            <li>
+              <p>{{this.id}}</p>
+              <p>{{this.burger_name}}</p>
+            </li>
+          {{/each}}
         </ul>
       </div>
     </div>
   </div>
-  <!-- Custom Script -->
-  <script src="./burger.js" type="text/javascript"></script>
+{{!--   <!-- Custom Script -->
+  <script src="../public/burger.js" type="text/javascript"></script>
 
 </body>
 
-</html>
+</html> --}}
