--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,120 @@
+
+   <div class="container-narrow">
+
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="/burgers">Home</a></li>
+          <li><a href="https://www.linkedin.com/in/parkerpreyer/" target="_blank">Linkedin</a></li>
+          <li><a href="https://github.com/ppreyer/burger-sequelize" target="_blank">Github</a></li>
+        </ul>
+        <h3 class="muted">The Burger Shop</h3>
+      </div>
+
+      <hr>
+
+      <div class="jumbotron">
+        <h1>The Burger Shop</h1>
+
+        <input class="new-burger" type="search" placeholder="May I take your order?" id="example-search-input">
+       <button type="submit" class="btn btn-large btn-success submit">Add a Burger</button>
+      </div>
+
+      <hr>
+
+      <div class="row-fluid marketing">
+        <div class="span6">
+          <div class="row">
+          <h4 class="cat">Uneaten Burgers</h4>
+          <div class="col-md-4 eat">
+          {{#each burgers}}
+            {{#unless this.devoured}}
+              <p>{{this.id}}: {{this.burger_name}} </p>
+            {{/unless}}
+          {{/each}}
+        </div>
+        <div class="col-md-2">
+          {{#each burgers}}
+            {{#unless this.devoured}}
+               <button class="btn btn-primary devourBurger" id={{this.id}}>Devour</button>
+            {{/unless}}
+          {{/each}}
+        </div>
+        </div>
+
+        </div>
+
+        <div class="span6">
+          <h4 class="cat">Devoured Burgers</h4>
+          <div class="col-md-4 eat">
+          {{#each burgers}}
+            {{#if this.devoured}}
+              <p>{{this.id}}: {{this.burger_name}} </p>
+            {{/if}}
+          {{/each}}
+        </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="footer">
+        <p>&copy; Parker Preyer 2017</p>
+      </div>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {{!-- <!DOCTYPE html>
 <html lang="en"> --}}
 {{!-- 
@@ -11,31 +128,42 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head> --}}
 
-  <div class="container">
+{{!-- <div class="container">
+
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <ul class="list-group todo-list">
-          <li class="list-group-item burgers">
-            <form id="burger-form">
-            <input class="new-burger" placeholder="Add a burger" type="text" />
-            <button type="submit" class="btn btn-default submit">Add a Burger</button>
-            </form>
-          </li>
-        </ul>
-        <ul>
+      <div class='col-md-2' id="uneaten">
+        <div class="alive">
           {{#each burgers}}
-            <li>
-              <p>{{this.id}}</p>
-              <p>{{this.burger_name}}</p>
-            </li>
+            {{#unless this.devoured}}
+              <p>{{this.id}}: {{this.burger_name}} </p>
+            {{/unless}}
           {{/each}}
-        </ul>
+        </div>
       </div>
+       <div class='col-md-2' id="uneaten">
+        <div class="alive">
+          {{#each burgers}}
+            {{#unless this.devoured}}
+               <button class="btn btn-primary devourBurger" id={{this.id}}>Devour</button>
+            {{/unless}}
+          {{/each}}
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="devoured">
+          {{#each burgers}}
+            {{#if this.devoured}}
+              <p>{{this.id}}: {{this.burger_name}}</p>
+            {{/if}}
+          {{/each}}
+        </div>
+      </div>
+
+      <input class="new-burger" type="search" placeholder="May I take your order?" id="example-search-input">
+        <button type="submit" class="btn btn-primary submit">Add a Burger</button>
+
     </div>
   </div>
-{{!--   <!-- Custom Script -->
-  <script src="../public/burger.js" type="text/javascript"></script>
 
-</body>
-
-</html> --}}
+  </div>
+ --}}
