heroku db added

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
       <div class="jumbotron">
         <h1>The Burger Shop</h1>
 
-        <input class="new-burger" type="search" placeholder="May I take your order?" id="example-search-input">
+        <input class="new-burger" type="search" placeholder="Burger Order" id="example-search-input">
        <button type="submit" class="btn btn-large btn-success submit">Add a Burger</button>
       </div>
 
