--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,52 @@
 
       <hr>
 
-      <div class="row-fluid marketing">
+
+<div class="row">
+  <center>
+    <!-- Left side (ready to eat) -->
+    <div class="col-md-6">
+      <h4>Uneaten Burgers</h4>
+      <div id="ready_to_eat">
+
+        <!-- Dynamically Insert Ready Burgers Here -->
+        {{#each burgers}}
+          {{#unless devoured}}
+              <div class="input-group col-md-12 col-xs-12">
+                 <div class="col-md-8 col-xs-7">{{id}}. {{burger_name}}</div>
+                 <div class="col-md-4 col-xs-5"><input name="customer" type="text" class="form-control bugerEaterTextBox" placeholder="Customer Name"></div>
+                <span class="input-group-btn devour-button">
+                  <button class="btn btn-primary devourBurger" id={{this.id}}>Devour</button>
+                </span>
+              </div>
+            </form>              
+          {{/unless}}
+        {{/each}}
+
+      </div>
+    </div>
+
+      <!-- Right side (already eaten) -->
+    <div class="col-md-6">
+      <h4>Devoured Burgers</h4>
+      <div id="already_eaten">
+
+        <!-- Dynamically Insert Eaten Burgers Here -->
+        {{#each burgers}}
+          {{#if this.devoured}}
+            <div class="input-group col-md-12 col-xs-12">
+                <div>{{this.id}}: {{this.burger_name}} </div>
+                {{!-- <div class="col-md-6 col-xs-6"><i>(Eaten by {{this.devourer.devourer_name}})</i></div> --}}
+            </div>
+          {{/if}}
+        {{/each}}
+
+      </div>
+    </div>
+  </center>
+</div>
+
+{{!--       <div class="row-fluid marketing">
         <div class="span6">
           <div class="row">
           <h4 class="cat">Uneaten Burgers</h4>
@@ -53,7 +98,7 @@
           {{/each}}
         </div>
         </div>
-      </div>
+      </div> --}}
 
       <hr>
 
